// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> should render correctly with custom props 1`] = `
<select
  class="StyledSelect-sc-1r3g39b-0 htlzwZ"
>
  <option>
    option
  </option>
</select>
`;

exports[`<Select /> should render correctly with default props and its children 1`] = `
<select
  class="StyledSelect-sc-1r3g39b-0 kdPVPy"
>
  <option>
    option
  </option>
</select>
`;
